Updated address and copyright year

--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
   <footer>
     <div class="container">
       <div class="nine columns">
-        <p>&copy; 2019 BB 63 Salon</p>
-        <p>Legacy Salon and Day Spa<br />
-            6115 Camp Bowie Blvd., Suite 208<br />
-            Fort Worth, Texas 76116</p>
+        <p>&copy; 2023 BB 63 Salon</p>
+        <p>3309 Winthrop Avenue<br />
+          Suite 67 <br />
+          Fort Worth, Texas 76116</p>
       </div>
       <div class="three columns">
         <a href="https://www.facebook.com/BB63Salon/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular socialIcons"></span></a>
