added color overlay to header image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="title">
-          <div><img src="images/bb63-logo.png" alt="BB 63 Salon Logo"/></div>
+          <div class="img-cover"><img src="images/bb63-logo.png" alt="BB 63 Salon Logo"/></div>
           <div class="smallsep heading"></div>
           <h1 class="heading">Fort Worth, Texas</h1>
           <h2 class="heading">Come as you are, we'll fix you up!</h2>
