Updated page about copy, changed nav to have hair and estheticians, updated cozy and leah profiles

--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
               <ul>
                 <li><a class="smoothscroll" href="#header">Home</a></li>
                 <li><a class="smoothscroll" href="#about">About</a></li>
-                <li><a class="smoothscroll" href="#cozzette">Cozzette</a></li>
-                <li><a class="smoothscroll" href="#leah">Leah</a></li>
+                <li><a class="smoothscroll" href="#hair">Hair Services</a></li>
+                <li><a class="smoothscroll" href="#estheticians">Estheticians</a></li>
               </ul>
             </nav>
           </div>
         </div>
+
         <div class="title">
-          <div class="img-cover"><img src="images/bb63-logo.png" alt="BB 63 Salon Logo"/></div>
+          <div><img src="images/bb63-logo.png" alt="BB 63 Salon Logo"/></div>
           <div class="smallsep heading"></div>
           <h1 class="heading">Fort Worth, Texas</h1>
           <h2 class="heading">Come as you are, we'll fix you up!</h2>
@@ -54,10 +55,13 @@
           <div class="mouse">
             <div class="wheel"></div>
           </div>
-          </a> </div>
+          </a>
+        </div>
+
         <a class="smoothscroll" href="#about">
         <div class="scroll-down"></div>
         </a>
+      </div>
     </header>
 
 <!-- About Section
@@ -69,20 +73,32 @@
       <h1>About</h1>
       <div class="block"></div>
       <p>
-        BB 63 Salon has been a staple in the DFW Metroplex for more than 5 years. Offering a wide range of services from unique haircuts, dyes, and special event styling to waxing services. Friendly and dedicated service while making your hair fantasies come true is just one of the reasons our guests return to us again and again. 
+        Established in 2010, we have been a staple salon in Fort Worth Texas for many years. Originally we opened a
+        location on Bluebonnet Circle near TCU, then added another near the historic Fort Worth Stockyards. After
+        taking a bit of time away to focus on family, we are pleased to announce that in October 2022 we reopened one
+        single location in the historic Ridglea Theater strip, at 3309 Winthrop Ave., Suite 67, Fort Worth, TX 76116.
+        We are located on the historic Camp Bowie Boulevard right next to the Ridglea Room. As lovers of local talent
+        and all things music, we have always supported the Fort Worth Rock Assembly, and now we are happy to say that
+        we share a building with three incredible music venues. Because of that however, we do have limited openings
+        in the evenings. Although we love the sound of a great live concert, we still want to provide our clients
+        with the best atmosphere possible for a relaxing service. At BB 63 Salon, you will find some of the best
+        hairstylists and the most amazing estheticians in town. Each member of our salon aims to please and takes great pride in satisfying each and every guest. Please review all of our services and let us help you to feel beautiful inside and out. Consider scheduling an aesthetic service, either before or after your hair service, and we will do our best to accommodate! We look forward to hearing from you soon!
       </p>
     </div>
     <div class="row">
       <div class="six columns">
         <h3><span class="typcn typcn-user icon"></span>Our Stylists</h3>
           <p>
-            Each stylist is an independent business owner while working with BB 63. Talented and creative, commanding their own individual style. Our stylists are highly trained with years of experience! It is assured that you will leave here happy and in love with your new look!
+            Each stylist is an independent business owner while working with BB 63. Talented and creative, commanding
+            their own individual style, our stylists are highly trained with years of experience! It is assured that
+            you will leave here happy and in love with your new look!
           </p>
       </div>
     <div class="six columns">
       <h3><span class="typcn typcn-location icon"></span>Our Location</h3>
       <p>
-        Our new location near Camp Bowie and I-30 completes the whole package in the heart of central Fort Worth, where great dining, shopping, and entertainment can be found a ston'es throw away. So, whether you are headed off to a special night in the Cultural District nearby or just want to freshen up your everyday look, BB63 Salon is your one-stop-shop to celebrate and refresh your own unique beauty and style.
+        Our new location near Camp Bowie and I-30 completes the whole package in the heart of central Fort Worth,
+        where great dining, shopping, and entertainment can be found a stone's throw away. So, whether you are headed off to a special night in the Cultural District nearby or just want to freshen up your everyday look, BB 63 Salon is your one-stop-shop to celebrate and refresh your own unique beauty and style.
       </p>
     </div>
   </div>
@@ -90,7 +106,13 @@
     <div class="six columns">
       <h3><span class="typcn typcn-shopping-cart icon"></span>Our Products</h3>
       <p>
-        Products used during the styling process are also available for purchase so you can achieve the look home.
+        Products used during the styling process are also available for purchase, so you can achieve the look home.
+        # TODO add maria nila logo #
+      </p>
+      <p>
+        We have also partnered with several local artist and for your convenience it's available for purchase inside
+        the salon.
+        # TODO add pictures of art #
       </p>
     </div>
   </div>
@@ -99,14 +121,22 @@
 <!-- Team Section
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->  
 
-<section id="cozzette">
+<section id="hair">
   <div class="container">
     <div class="row">
-      <h1>Cozzette</h1>
+      <h1>Hair Services</h1>
         <div class="block"></div>
+      <p> # TODO some sort of intro text #</p>
     </div>
+  </div>
+
+
+    <div class="container">
     <div class="row">
-    <div class="three columns"> 
+    <div class="three columns">
+      <h2>Cozzette</h2>
+      <h5>Owner | Hairstylist</h5>
+      <div class="block"></div>
       <img class="stylist-photo" src="images/cozy.jpg" alt="Cozzette Photo" />
       <a href="tel:+18177064925"><span class="typcn typcn-phone footer-icon"></span> 817-706-4925</a><br>
       <a href="https://www.facebook.com/cozzettefwtxhairstylist/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a>
@@ -114,39 +144,40 @@
     </div>
     <div class="nine columns"> 
       <p>
-        15 years in the biz and loving every minute of it. My family and clients are my priority. I aim to please and give each client a fun atmosphere and looks they can maintain without me! Also letting you know in advance I double book appts and I share a room so if you like to be alone during your appointment, you will need to come during non peak hours and please call to request it. For all appointments and questions don’t hesitate to text me. Please include your name, phone, email and the service you are wanting, best times for you and I will be happy to book appointment for you. Thank you.
+        I’m Cozzette, the owner of BB 63 Salon. I have been in this industry for 16 years, and I just recently opened
+        another salon here in Funky Town. I told myself after my kids started school I would revisit owning a salon again, so that’s exactly what I did. I love working with the public and being such a huge presence in the service industry. I strive to use eco and animal friendly products. I do my absolute best to recycle, and try to limit the amount of unnecessary waste. I am proud to offer gender-neutral pricing, meaning all prices are based on the time it takes to perform a service, not gender identity. At BB 63 Salon, all are welcome and will always be treated equally. “Come as you are, we’ll fix you up!” I typically work Tuesday through Thursday, most Sundays and every other Saturday. I offer many services including perms, however, certain services may require a consultation or may need to be performed on a weekday. Due to my current workload, I rarely have openings in the evenings or on weekends. If you would like an evening appointment, and you don’t see an availability with me, please consider scheduling something with Leah. I look forward to seeing you soon, and thank you so much for viewing my profile!
       </p>
 
-      <a href="https://www.styleseat.com/m/v/cozzettehairstylist" target="_blank" rel="noreferrer noopener"><img src="images/styleseat-logo.png" class="styleseat-photo" alt="Styleseat logo"/></a><br>
+      <h4>Book Me!</h4>
+      <a href="https://www.styleseat.com/m/v/cozzettehairstylist" target="_blank" rel="noreferrer noopener">
+        <img src="images/styleseat-logo.png" class="styleseat-photo" alt="Styleseat logo"/></a><br>
     
     </div>
     </div>
   </div>
-</section>
+
 <br>
 <br>
 
-<section id="leah">
     <div class="container">
       <div class="row">
-        <h1>Leah</h1>
+        <h2>Leah</h2>
+        <h5>Hairstylist</h5>
           <div class="block"></div>
       </div>
       <div class="row">
       <div class="three columns"> 
-        <img class="stylist-photo" src="images/Leah.jpg" alt="Leah's Photo" />
+        <img class="stylist-photo" src="images/Leah.jpeg" alt="Leah's Photo" />
         <a href="tel:+18179256573"><span class="typcn typcn-phone icon"></span> 817-925-6573</a><br>
         <a href="https://www.facebook.com/Leah-at-BB-63-Salon-1522701174610514/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a>
       </div>
       <div class="nine columns"> 
         <p>
-          I have been in the industry for ten years and have stayed loyal to Fort Worth the length of my career. I specialize in coloring, short to long haircuts, waxing and highlights.
+          Hi, my name is Leah and I have been in this industry for 20 years. Due to the  Covid-19 pandemic, I took some time off, but quickly realized just how much I missed my clients! Because of this, I knew I had to come back to the hair industry. I have missed it tremendously and I’m so glad to be back at BB 63 Salon. I love making long lasting relationships with my guests and making people feel both confident and beautiful. Currently I’m available on Mondays, from 10am to 6pm, and on Fridays, from 10am to 4pm. Occasionally, I will have overflow on other days, so if you don’t find a time that works for you, please text me and I will see what I can do to accommodate. Thank you so much for viewing my profile! Hope to book something with you soon!
         </p>
 
-        <p>
-          I am fortunate to be part of a talented and inspiring team of stylists. I am blessed to have awesome and fun clientele, and love creating unique and personalized looks for every client that I work with.
-        </p>
-  
+        <h4>Book Me!</h4>
+        <div class="block"></div>
         <a href="https://www.styleseat.com/m/v/leahverreault" target="_blank" rel="noreferrer noopener"><img src="images/styleseat-logo.png" class="styleseat-photo" alt="Styleseat logo"/></a><br>
         
       </div>
