Updated Tiffany and Salena's photos, bios, added todos for URLS to personal sites

--- a/index.html
+++ b/index.html
@@ -85,15 +85,8 @@
         hairstylists and the most amazing estheticians in town. Each member of our salon aims to please and takes great pride in satisfying each and every guest. Please review all of our services and let us help you to feel beautiful inside and out. Consider scheduling an aesthetic service, either before or after your hair service, and we will do our best to accommodate! We look forward to hearing from you soon!
       </p>
     </div>
+
     <div class="row">
-      <div class="six columns">
-        <h3><span class="typcn typcn-user icon"></span>Our Stylists</h3>
-          <p>
-            Each stylist is an independent business owner while working with BB 63. Talented and creative, commanding
-            their own individual style, our stylists are highly trained with years of experience! It is assured that
-            you will leave here happy and in love with your new look!
-          </p>
-      </div>
     <div class="six columns">
       <h3><span class="typcn typcn-location icon"></span>Our Location</h3>
       <p>
@@ -101,8 +94,7 @@
         where great dining, shopping, and entertainment can be found a stone's throw away. So, whether you are headed off to a special night in the Cultural District nearby or just want to freshen up your everyday look, BB 63 Salon is your one-stop-shop to celebrate and refresh your own unique beauty and style.
       </p>
     </div>
-  </div>
-  <div class="row">
+
     <div class="six columns">
       <h3><span class="typcn typcn-shopping-cart icon"></span>Our Products</h3>
       <p>
@@ -112,9 +104,10 @@
       <p>
         We have also partnered with several local artist and for your convenience it's available for purchase inside
         the salon.
-        # TODO add pictures of art #
+        # TODO add pictures of art, video on left, square photos on right #
       </p>
     </div>
+  </div>
   </div>
 </section>
 
@@ -126,10 +119,11 @@
     <div class="row">
       <h1>Hair Services</h1>
         <div class="block"></div>
-      <p> # TODO some sort of intro text #</p>
+      <p>Each stylist is an independent business owner while working with BB 63. Talented and creative, commanding
+        their own individual style, our stylists are highly trained with years of experience! It is assured that
+        you will leave here happy and in love with your new look!</p>
     </div>
   </div>
-
 
     <div class="container">
     <div class="row">
@@ -173,14 +167,87 @@
       </div>
       <div class="nine columns"> 
         <p>
-          Hi, my name is Leah and I have been in this industry for 20 years. Due to the  Covid-19 pandemic, I took some time off, but quickly realized just how much I missed my clients! Because of this, I knew I had to come back to the hair industry. I have missed it tremendously and I’m so glad to be back at BB 63 Salon. I love making long lasting relationships with my guests and making people feel both confident and beautiful. Currently I’m available on Mondays, from 10am to 6pm, and on Fridays, from 10am to 4pm. Occasionally, I will have overflow on other days, so if you don’t find a time that works for you, please text me and I will see what I can do to accommodate. Thank you so much for viewing my profile! Hope to book something with you soon!
+          Hi, my name is Leah and I have been in this industry for 20 years. Due to the  Covid-19 pandemic, I took
+          some time off, but quickly realized just how much I missed my clients! Because of this, I knew I had to
+          come back to the hair industry. I have missed it tremendously, and I’m so glad to be back at BB 63 Salon. I
+          love making long-lasting relationships with my guests and making people feel both confident and beautiful.
+          Currently, I’m available on Mondays, from 10am to 6pm, and on Fridays, from 10am to 4pm. Occasionally, I will have overflow on other days, so if you don’t find a time that works for you, please text me and I will see what I can do to accommodate. Thank you so much for viewing my profile! Hope to book something with you soon!
         </p>
 
-        <h4>Book Me!</h4>
-        <div class="block"></div>
-        <a href="https://www.styleseat.com/m/v/leahverreault" target="_blank" rel="noreferrer noopener"><img src="images/styleseat-logo.png" class="styleseat-photo" alt="Styleseat logo"/></a><br>
-        
+        <h4>Book Me! # TODO Update Booking Info #</h4>
+
+        <button>TODO</button>
+
       </div>
+      </div>
+    </div>
+  </section>
+<br />
+<br />
+  <section id="esthetician">
+    <div class="container">
+      <div class="row">
+        <h1>Estheticians</h1>
+        <div class="block"></div>
+        <p> # TODO write something about them #</p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <h2>Tiffany</h2>
+        <h5># TODO align with h2 #</h5>
+        <div class="block"></div>
+      </div>
+      <div class="row">
+        <div class="three columns">
+          <img class="stylist-photo" src="images/tiffany.png" alt="Tiffany at Work" />
+          <a href="tel:+TODO"><span class="typcn typcn-phone icon"></span> TODO</a><br>
+          <a href="TODO" target="_blank" rel="noreferrer noopener"><span
+            class="typcn typcn-social-facebook-circular icon"></span></a>
+        </div>
+        <div class="nine columns">
+          <p>
+            I am Tiffany! Ever since I received my esthetics license I haven't looked back. I Started up Fabulous Faces by Tiffany to give my guests the best cosmetic services, and experience possible. I have worked in the healthcare industry for many years prior, so it just made sense to merge to the cosmetic side.
+          </p>
+          <p>
+            I specialize in botox injections, permanent makeup, micro blading, many types of facials and fillers. If you want to keep your youthful appearance or if you are curious if any of these services are for you, please message me. I can help you look and feel your best.
+          </p>
+          <button>TODO</button>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <h2>Salena</h2>
+        <h5># TODO Align with h2 #</h5>
+        <div class="block"></div>
+      </div>
+      <div class="row">
+        <div class="three columns">
+          <img class="stylist-photo" src="images/salena.png" alt="Salena working on a client" />
+          <a href="tel:+TODO"><span class="typcn typcn-phone icon"></span> PHONE</a><br>
+          <a href="TODO" target="_blank" rel="noreferrer noopener"><span
+            class="typcn typcn-social-facebook-circular icon"></span></a>
+        </div>
+        <div class="nine columns">
+          <p>
+            My Name is Salena Mason. I was born and raised in Fort Worth, TX. I love traveling, and anything that involves my husky and blue heeler. I’m recently engaged and just loving life.
+          </p>
+          <p>
+            I’ve always imagined owning my own business and giving my guests the best services. My goal is to always provide my clients with the most innovative skincare products and treatments. I have just recently moved to BB 63 Salon, located in the same strip as the historic Ridglea Theater bldg.
+          </p>
+          <p>
+            I have been working professionally as a esthetician for several years and gained a lot of experience with my diverse clientele and services I offer. My number one passion in life is skincare. I really do enjoy making my clients feel beautiful and the connections that come along with it.
+          </p>
+          <p>
+            Please feel free to schedule your appt today.
+          </p>
+          <button>TODO</button>
+
+        </div>
       </div>
     </div>
   </section>
@@ -198,8 +265,8 @@
         <a href="https://www.instagram.com/bb63salon/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-instagram-circular socialIcons"></span></a>
  
     </div>
+    </div>
   </footer>
-</div>
 
 <!-- JAVASCRIPT -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
