Move stylists info to new header

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
       <a href="https://www.facebook.com/cozzettefwtxhairstylist/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a>
       <a href="https://www.instagram.com/cozydoll81/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-instagram-circular icon"></span></a>
     </div>
+      </div>
+      <div class="row">
     <div class="nine columns"> 
       <p>
         I’m Cozzette, the owner of BB 63 Salon. I have been in this industry for 16 years, and I just recently opened
@@ -143,8 +145,7 @@
       </p>
 
       <h4>Book Me!</h4>
-      <a href="https://www.styleseat.com/m/v/cozzettehairstylist" target="_blank" rel="noreferrer noopener">
-        <img src="images/styleseat-logo.png" class="styleseat-photo" alt="Styleseat logo"/></a><br>
+      <button>TODO</button>
     
     </div>
     </div>
@@ -156,7 +157,7 @@
     <div class="container">
       <div class="row">
         <h2>Leah</h2>
-        <h5>Hairstylist</h5>
+        <h5>Hairstylist #TODO align to h2 #</h5>
           <div class="block"></div>
       </div>
       <div class="row">
@@ -173,8 +174,6 @@
           love making long-lasting relationships with my guests and making people feel both confident and beautiful.
           Currently, I’m available on Mondays, from 10am to 6pm, and on Fridays, from 10am to 4pm. Occasionally, I will have overflow on other days, so if you don’t find a time that works for you, please text me and I will see what I can do to accommodate. Thank you so much for viewing my profile! Hope to book something with you soon!
         </p>
-
-        <h4>Book Me! # TODO Update Booking Info #</h4>
 
         <button>TODO</button>
 
