Added images to shop front and art for sale

--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
         we share a building with three incredible music venues. Because of that however, we do have limited openings
         in the evenings. Although we love the sound of a great live concert, we still want to provide our clients
         with the best atmosphere possible for a relaxing service. At BB 63 Salon, you will find some of the best
-        hairstylists and the most amazing estheticians in town. Each member of our salon aims to please and takes great pride in satisfying each and every guest. Please review all of our services and let us help you to feel beautiful inside and out. Consider scheduling an aesthetic service, either before or after your hair service, and we will do our best to accommodate! We look forward to hearing from you soon!
+        hairstylists and the most amazing estheticians in town. Each member of our salon aims to please and takes
+        great pride in satisfying each and every guest. Please review all of our services and let us help you to feel
+        beautiful inside and out. Consider scheduling an aesthetic service, either before or after your hair service,
+        and we will do our best to accommodate! We look forward to hearing from you soon!
       </p>
     </div>
 
@@ -93,61 +96,79 @@
         Our new location near Camp Bowie and I-30 completes the whole package in the heart of central Fort Worth,
         where great dining, shopping, and entertainment can be found a stone's throw away. So, whether you are headed off to a special night in the Cultural District nearby or just want to freshen up your everyday look, BB 63 Salon is your one-stop-shop to celebrate and refresh your own unique beauty and style.
       </p>
+      <img src="images/building-front.jpg" alt="front face of BB 63 Salon" class="six-img"/>
     </div>
 
     <div class="six columns">
       <h3><span class="typcn typcn-shopping-cart icon"></span>Our Products</h3>
-      <p>
+      <p class="less-marg">
         Products used during the styling process are also available for purchase, so you can achieve the look home.
-        # TODO add maria nila logo #
       </p>
+        <img src="images/marianila.png" alt="We carry Maria Nila products" class="sm-img" />
       <p>
-        We have also partnered with several local artist and for your convenience it's available for purchase inside
-        the salon.
-        # TODO add pictures of art, video on left, square photos on right #
+        We have also partnered with several local artists and, for your convenience, several pieces are available for
+        purchase inside the salon.
       </p>
+        <div class="row">
+          <div class="six columns">
+            <img src="images/art-1.jpg" class="med-img" />
+            <img src="images/art-2.jpg" class="med-img" />
+          </div>
+          <div class="six columns">
+            <img src="images/art-3.jpg" class="med-img" />
+            <img src="images/art-4.jpg" class="med-img" />
+          </div>
+        </div>
     </div>
   </div>
   </div>
 </section>
 
 <!-- Team Section
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->  
-
+––––––––––––––––––––––––––––––––––––––––––––––––––-->
 <section id="hair">
   <div class="container">
     <div class="row">
       <h1>Hair Services</h1>
         <div class="block"></div>
-      <p>Each stylist is an independent business owner while working with BB 63. Talented and creative, commanding
-        their own individual style, our stylists are highly trained with years of experience! It is assured that
-        you will leave here happy and in love with your new look!</p>
+          <p>
+            Each stylist is an independent business owner while working with BB 63. Talented and creative, commanding
+            their own individual style, our stylists are highly trained with years of experience! It is assured that you will leave here happy and in love with your new look!
+          </p>
     </div>
   </div>
 
-    <div class="container">
+  <div class="container">
     <div class="row">
-    <div class="three columns">
-      <h2>Cozzette</h2>
-      <h5>Owner | Hairstylist</h5>
+      <h2>Leah</h2>
+      <h5>Hairstylist #TODO align to h2 #</h5>
       <div class="block"></div>
-      <img class="stylist-photo" src="images/cozy.jpg" alt="Cozzette Photo" />
-      <a href="tel:+18177064925"><span class="typcn typcn-phone footer-icon"></span> 817-706-4925</a><br>
-      <a href="https://www.facebook.com/cozzettefwtxhairstylist/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a>
-      <a href="https://www.instagram.com/cozydoll81/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-instagram-circular icon"></span></a>
     </div>
+    <div class="row">
+      <div class="three columns">
+        <img class="stylist-photo" src="images/cozy.jpg" alt="Cozzette's Photo" />
+        <a href="tel:+1817-706-4925"><span class="typcn typcn-phone icon"></span> 817-706-4925</a><br>
+        <a href="https://www.facebook.com/Leah-at-BB-63-Salon-1522701174610514/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a>
       </div>
-      <div class="row">
-    <div class="nine columns"> 
-      <p>
-        I’m Cozzette, the owner of BB 63 Salon. I have been in this industry for 16 years, and I just recently opened
-        another salon here in Funky Town. I told myself after my kids started school I would revisit owning a salon again, so that’s exactly what I did. I love working with the public and being such a huge presence in the service industry. I strive to use eco and animal friendly products. I do my absolute best to recycle, and try to limit the amount of unnecessary waste. I am proud to offer gender-neutral pricing, meaning all prices are based on the time it takes to perform a service, not gender identity. At BB 63 Salon, all are welcome and will always be treated equally. “Come as you are, we’ll fix you up!” I typically work Tuesday through Thursday, most Sundays and every other Saturday. I offer many services including perms, however, certain services may require a consultation or may need to be performed on a weekday. Due to my current workload, I rarely have openings in the evenings or on weekends. If you would like an evening appointment, and you don’t see an availability with me, please consider scheduling something with Leah. I look forward to seeing you soon, and thank you so much for viewing my profile!
-      </p>
+      <div class="nine columns">
+        <p>
+          I’m Cozzette, the owner of BB 63 Salon. I have been in this industry for 16 years, and I just recently
+          opened another salon here in Funky Town. I told myself after my kids started school I would revisit owning
+          a salon again, so that’s exactly what I did. I love working with the public and being such a huge presence
+          in the service industry. I strive to use eco and animal friendly products. I do my absolute best to
+          recycle, and try to limit the amount of unnecessary waste. I am proud to offer gender-neutral pricing,
+          meaning all prices are based on the time it takes to perform a service, not gender identity. At BB 63
+          Salon, all are welcome and will always be treated equally. “Come as you are, we’ll fix you up!” I typically
+          work Tuesday through Thursday, most Sundays and every other Saturday. I offer many services including
+          perms, however, certain services may require a consultation or may need to be performed on a weekday. Due
+          to my current workload, I rarely have openings in the evenings or on weekends. If you would like an evening
+          appointment, and you don’t see an availability with me, please consider scheduling  something with Leah. I
+          look forward to seeing you soon, and thank you so much for viewing my profile!
+        </p>
 
-      <h4>Book Me!</h4>
-      <button>TODO</button>
-    
-    </div>
+        <button>TODO</button>
+
+      </div>
     </div>
   </div>
 
@@ -161,18 +182,20 @@
           <div class="block"></div>
       </div>
       <div class="row">
-      <div class="three columns"> 
+      <div class="three columns">
         <img class="stylist-photo" src="images/Leah.jpeg" alt="Leah's Photo" />
         <a href="tel:+18179256573"><span class="typcn typcn-phone icon"></span> 817-925-6573</a><br>
         <a href="https://www.facebook.com/Leah-at-BB-63-Salon-1522701174610514/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a>
       </div>
-      <div class="nine columns"> 
+      <div class="nine columns">
         <p>
           Hi, my name is Leah and I have been in this industry for 20 years. Due to the  Covid-19 pandemic, I took
           some time off, but quickly realized just how much I missed my clients! Because of this, I knew I had to
           come back to the hair industry. I have missed it tremendously, and I’m so glad to be back at BB 63 Salon. I
           love making long-lasting relationships with my guests and making people feel both confident and beautiful.
-          Currently, I’m available on Mondays, from 10am to 6pm, and on Fridays, from 10am to 4pm. Occasionally, I will have overflow on other days, so if you don’t find a time that works for you, please text me and I will see what I can do to accommodate. Thank you so much for viewing my profile! Hope to book something with you soon!
+          Currently, I’m available on Mondays, from 10am to 6pm, and on Fridays, from 10am to 4pm. Occasionally, I
+          will have overflow on other days, so if you don’t find a time that works for you, please text me and I will
+          see what I can do to accommodate. Thank you so much for viewing my profile! Hope to book something with you soon!
         </p>
 
         <button>TODO</button>
