Filled out estetician information

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         </div>
 
         <div class="title">
-          <div><img src="images/bb63-logo.png" alt="BB 63 Salon Logo"/></div>
-          <div class="smallsep heading"></div>
+          <div><img src="images/bb63-logo.png" class="logo" alt="BB 63 Salon Logo"/></div>
+          <!--<div class="smallsep heading"></div>-->
+
           <h1 class="heading">Fort Worth, Texas</h1>
           <h2 class="heading">Come as you are, we'll fix you up!</h2>
           <a class="smoothscroll" href="#about">
@@ -144,18 +145,22 @@
           </p>
     </div>
   </div>
-
+<br />
   <div class="container">
     <div class="row">
-      <h2>Leah</h2>
-      <h5>Hairstylist #TODO align to h2 #</h5>
+      <h2>Cozzette | <small>Owner, Hairstylist</small></h2>
       <div class="block"></div>
     </div>
     <div class="row">
       <div class="three columns">
         <img class="stylist-photo" src="images/cozy.jpg" alt="Cozzette's Photo" />
+        <h5>
         <a href="tel:+1817-706-4925"><span class="typcn typcn-phone icon"></span> 817-706-4925</a><br>
-        <a href="https://www.facebook.com/Leah-at-BB-63-Salon-1522701174610514/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a>
+        <a href="https://www.facebook.com/cozzettefwtxhairstylist" target="_blank"
+           rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a>
+          <a href="https://www.instagram.com/cozydoll81/" target="_blank" rel="noreferrer noopener"><span
+            class="typcn typcn-social-instagram-circular icon"></span></a>
+        </h5>
       </div>
       <div class="nine columns">
         <p>
@@ -173,7 +178,9 @@
           look forward to seeing you soon, and thank you so much for viewing my profile!
         </p>
 
-        <button>TODO</button>
+        <a class="button" target="_blank" href="https://www.styleseat.com/m/v/cozzettehairstylist"
+           role="button">Book Now</a> <a class="button" target="_blank" href="https://www.cozzettehairstylist.com/"
+                                           role="button">My Website</a>
 
       </div>
     </div>
@@ -184,15 +191,16 @@
 
     <div class="container">
       <div class="row">
-        <h2>Leah</h2>
-        <h5>Hairstylist #TODO align to h2 #</h5>
+        <h2>Leah | <small>Hairstylist</small></h2>
           <div class="block"></div>
       </div>
       <div class="row">
       <div class="three columns">
         <img class="stylist-photo" src="images/Leah.jpeg" alt="Leah's Photo" />
+        <h5>
         <a href="tel:+18179256573"><span class="typcn typcn-phone icon"></span> 817-925-6573</a><br>
         <a href="https://www.facebook.com/Leah-at-BB-63-Salon-1522701174610514/" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a>
+        </h5>
       </div>
       <div class="nine columns">
         <p>
@@ -205,7 +213,8 @@
           see what I can do to accommodate. Thank you so much for viewing my profile! Hope to book something with you soon!
         </p>
 
-        <button>TODO</button>
+        <a class="button" href="tel:+18179256573""
+           role="button">Call to Book</a>
 
       </div>
       </div>
@@ -218,22 +227,24 @@
       <div class="row">
         <h1>Estheticians</h1>
         <div class="block"></div>
-        <p> # TODO write something about them #</p>
+        <p>Indulge your senses and rejuvenate your skin with our premier esthetician services. Our highly skilled
+          estheticians are dedicated to enhancing your natural radiance, restoring your confidence, and providing you with a truly transformative experience.</p>
       </div>
     </div>
 
     <div class="container">
       <div class="row">
-        <h2>Tiffany</h2>
-        <h5># TODO align with h2 #</h5>
+        <h2>Tiffany | <small>Fabulous Faces by Tiffany</small></h2>
         <div class="block"></div>
       </div>
       <div class="row">
         <div class="three columns">
           <img class="stylist-photo" src="images/tiffany.png" alt="Tiffany at Work" />
-          <a href="tel:+TODO"><span class="typcn typcn-phone icon"></span> TODO</a><br>
-          <a href="TODO" target="_blank" rel="noreferrer noopener"><span
-            class="typcn typcn-social-facebook-circular icon"></span></a>
+          <h5>
+            <a href="tel:+18172108840"><span class="typcn typcn-phone icon"></span> 817-210-8840</a><br>
+            <a href="https://www.facebook.com/fabfacesbyt" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a><a href="https://www.instagram.com/fabulousfacesbytiffany/" target="_blank" rel="noreferrer noopener"><span
+            class="typcn typcn-social-instagram-circular icon"></span></a>
+          </h5>
         </div>
         <div class="nine columns">
           <p>
@@ -242,24 +253,27 @@
           <p>
             I specialize in botox injections, permanent makeup, micro blading, many types of facials and fillers. If you want to keep your youthful appearance or if you are curious if any of these services are for you, please message me. I can help you look and feel your best.
           </p>
-          <button>TODO</button>
+          <a class="button" target="_blank" href="https://www.fabulousfacesbyt.com/book-online-buy"
+             role="button">Book Now</a>
 
         </div>
       </div>
     </div>
-
+    <br />
+    <br />
     <div class="container">
       <div class="row">
-        <h2>Salena</h2>
-        <h5># TODO Align with h2 #</h5>
+        <h2>Salena | <small>Skin by Salena</small></h2>
         <div class="block"></div>
       </div>
       <div class="row">
         <div class="three columns">
           <img class="stylist-photo" src="images/salena.png" alt="Salena working on a client" />
-          <a href="tel:+TODO"><span class="typcn typcn-phone icon"></span> PHONE</a><br>
-          <a href="TODO" target="_blank" rel="noreferrer noopener"><span
-            class="typcn typcn-social-facebook-circular icon"></span></a>
+          <h5>
+            <a href="tel:+18174559692"><span class="typcn typcn-phone icon"></span> 817-455-9692</a><br>
+            <a href="https://www.facebook.com/skinbysalena" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a><a href="https://www.instagram.com/skinbysalena/" target="_blank" rel="noreferrer noopener"><span
+            class="typcn typcn-social-instagram-circular icon"></span></a>
+          </h5>
         </div>
         <div class="nine columns">
           <p>
@@ -274,7 +288,8 @@
           <p>
             Please feel free to schedule your appt today.
           </p>
-          <button>TODO</button>
+          <a class="button" target="_blank" href="https://skinbysalena.glossgenius.com/services"
+             role="button">Book Now</a>
 
         </div>
       </div>
